[package]
name = "hash-bench"
version = "0.1.0"
authors = ["nd419 <5161147+neeldug@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustc-hash = "1.1.0"
hashbrown = "0.8.2"
rand = {version = "0.7.3", features = ["small_rng"]}
jemallocator = "0.3.2"

[dev-dependencies]
criterion = "0.3.3"

[target.x86_64-unknown-linux-gnu.dev-dependencies]
jemallocator = "0.3.2"

[[bench]]
name = "construction-a"
harness = false

[[bench]]
name = "construction-b"
harness = false

[[bench]]
name = "insert-erase-a"
harness = false

[[bench]]
name = "insert-erase-b"
harness = false

[[bench]]
name = "insert-erase-c"
harness = false

[[bench]]
name = "access-a"
harness = false

[[bench]]
name = "access-b"
harness = false
